<resources>
    <string name="app_name">RunHelper</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="save">SAVE</string>
    <string name="saved">SAVED</string>
    <string name="chart">CHART</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>
    <string name="map">MAP</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="speed">Speed</string>
    <string name="delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="share">Share</string>

    <string name="no_data_save">No new data to be saved</string>
    <string name="gps_prompt">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_no_permision">The app do not have the permission to use GPS.</string>
    <string name="gps_listen_fail">Listen to location fail. </string>
    <string name="gps_precision_low">ACCURACY too low. %f</string>
    <string name="gps_precision_low2">Gps accuracy too low, less than %dm</string>

    <string name="exit_prompt">You have unsaved running record, continue to exit?</string>
    <string name="exit_prompt2">Tap back button twice in order to exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="end">end</string>

    <string name="altitude">Altitude</string>

    <string name="select_prompt">Please select a record</string>
    <string name="select_no">No record is selected.</string>

    <string name="restart_prompt">Restarting App is recommended after changing configuration.</string>

    <string name="have_fun">Jason Chan: Have fun.</string>
    <string name="open_source">RunHelper is an open source project. For more info, see: https://github.com/zwChan/RunningX</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Run! </item>
        <!-- <item >Friends</item> -->
        <item >History records</item>
        <!--<item >Analysis</item>-->
        <item >Configuration</item>
        <item >About RunHelper</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <!--<item>@drawable/ic_people</item>-->
        <item>@drawable/ic_history</item>
        <!--<item>@drawable/ic_communities</item>-->
        <item>@drawable/ic_conf</item>
        <item>@drawable/ic_aboutus</item>
    </array>

    <string-array name="record_spinner">
        <item>Select a record</item>
    </string-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="international">International</string>
    <string name="usa">United States</string>
    <string-array name="LENGTH_UNIT_LIST">
        <item>@string/international</item>
        <item>@string/usa</item>
    </string-array>

    <string name="gmap_no">Google service is not in available status, use other map.</string>
    <string name="gmap">Google Map</string>
    <string name="amap">Gaode Map</string>
    <string-array name="MAP_TYPE_LIST">
        <item>@string/gmap</item>
        <item>@string/amap</item>
    </string-array>

    <string name="pace">Pace</string>
    <string-array name="SPEED_TYPE_LIST">
        <item name="pace">@string/pace</item>
        <item name="speed">@string/speed</item>
    </string-array>

    <string-array name="MIN_DISTANCE_LIST">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string-array name="INTERVAL_LOCATION_LIST">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
    </string-array>
    <string-array name="LOCATION_ACCURACY_LIST">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>50</item>
        <item>100</item>
    </string-array>
    <string-array name="SPEED_AVG_LIST">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string-array name="GPS_ONLY_LIST">
        <item>True</item>
        <!--<item>False</item>-->
    </string-array>
    <string-array name="ACCELERATE_FACTOR_LIST">
        <item>0</item>
        <item>0.2</item>
        <item>0.5</item>
        <item>1.0</item>
    </string-array>
</resources>
